agcoolstoresm/default-destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
spec:
  host: "*.agcoolstoresm.svc.cluster.local"
  trafficPolicy:
   tls:
    mode: ISTIO_MUTUAL
