agcoolstoresm/gateway-virtualservice.yml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: gateway-agcoolstoresm
spec:
  hosts:
    - '*'
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: /agcoolstoresm/api
      rewrite:
        uri: /api
      route:
        - destination:
            host: gateway
            port:
              number: 8080
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: web
            port:
              number: 8080
