agcoolstoresm/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gateway-agcoolstoresm
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /agcoolstoresm/api
    rewrite:
      uri: "/api"
    route:
    - destination:
        port:
          number: 8080
        host: gateway
---
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: inventory-virtual
spec:
  hosts:
    - inventory
  http:
    - route:
        - destination:
            host: inventory-dotnet
            port:
              number: 8080
          weight: 50
        - destination:
            host: inventory
            port:
              number: 8080
          weight: 50
